# NoteBook

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish-package.yml  release.yml
docs/: api.md  artifact-guide.md  causal_benchmarks.md  cli-reference.md  discrete-formulation.md  examples.md  getting-started.md  index.md  numerical-notes.md  publishing.md  regularization-notes.md  research-notes.md  upgrade_notes.md
docs/assets/examples/call_spread/: summary.json
docs/assets/gallery/: gallery_casebook.md  gallery_summary.json  gallery_summary.md
docs/assets/gallery/broad_straddle/: experiment_report.md  summary.json
docs/assets/gallery/call_spread/: experiment_report.md
docs/assets/gallery/centered_call/: experiment_report.md  summary.json
docs/assets/gallery/centered_straddle/: experiment_report.md  summary.json
docs/assets/gallery/put_spread/: experiment_report.md  summary.json
docs/assets/gallery/quadratic_spread/: experiment_report.md  summary.json
docs/assets/gallery/uniform_abs_spread/: experiment_report.md  summary.json
docs/assets/gallery/wide_abs/: experiment_report.md  summary.json
docs/assets/gallery/wide_put/: experiment_report.md  summary.json
docs/stylesheets/: extra.css
docs/theory/: causal_mot.md
notebooks/: legacy_robust_pricing_uniform.ipynb  uniform_abs_spread_report.ipynb
scripts/: benchmark_causal.py  generate_example_gallery.py  run_uniform_abs_spread.py
src/mot_pricing/: __init__.py  benchmarks.py  causal_regularized.py  cli.py  continuous.py  discretization.py  exact.py  experiments.py  gallery.py  gallery_cli.py  marginals.py  payoffs.py  regularized.py  reporting.py
tests/: test_causal_experiments.py  test_causal_marginals.py  test_causal_regularized.py  test_continuous_limit.py  test_exact_mot.py  test_marginals_and_payoffs.py  test_regularized_mot.py  test_reporting_and_gallery.py
