[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mot-pricing"
version = "0.4.0"
description = "Exact and entropic martingale optimal transport experiments for robust pricing."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["optimal transport", "martingale", "robust pricing", "quant finance", "sinkhorn"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.2",
  "twine>=5.1",
]
docs = [
  "mkdocs>=1.6,<2.0",
  "mkdocs-material>=9.5,<10.0",
]

[project.scripts]
mot-uniform = "mot_pricing.cli:main"
mot-gallery = "mot_pricing.gallery_cli:main"

[project.urls]
Homepage = "https://github.com/AnouarMohamed/JavaFinalJee"
Repository = "https://github.com/AnouarMohamed/JavaFinalJee"
Documentation = "https://anouarmohamed.github.io/JavaFinalJee/"
Changelog = "https://github.com/AnouarMohamed/JavaFinalJee/blob/main/CHANGELOG.md"
Issues = "https://github.com/AnouarMohamed/JavaFinalJee/issues"
Releases = "https://github.com/AnouarMohamed/JavaFinalJee/releases"
PyPI = "https://pypi.org/project/mot-pricing/"
TestPyPI = "https://test.pypi.org/project/mot-pricing/"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
